[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Dimitri Belopopsky <dimitri@belopopsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [workspace]
# members = ["day1"]

[[bin]]
name = "day1"
path = "day1/src/main.rs"

[[bin]]
name = "day2"
path = "day2/src/main.rs"

[[bin]]
name = "day3"
path = "day3/src/main.rs"

[[bin]]
name = "day4"
path = "day4/src/main.rs"

[dependencies]
